<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sh_bg_header_police_blue"
        android:paddingHorizontal="16dp"
        android:paddingVertical="36dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/vamos_login"
        android:textColor="@color/flesh"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="71dp"
        android:paddingHorizontal="48dp"
        android:background="@drawable/sh_bg_btn_carmine_pink"
        android:gravity="center"
        android:text="@string/iniciar_sesion"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:translationZ="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRegistrar01"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="72dp"
        android:paddingHorizontal="64dp"
        android:gravity="center"
        android:background="@drawable/sh_bg_btn_bright_gray"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/registrar"
        android:textAllCaps="false"
        android:textColor="@color/police_blue"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvRegistrar01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sh_bg_btn_bright_gray"
            android:paddingHorizontal="16dp"
            android:hint="@string/correo" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tilCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sh_bg_btn_bright_gray"
            android:paddingHorizontal="16dp"
            android:hint="@string/passwordd" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvOlvidastes"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/olvidastes_passwordd"
        android:textColor="@color/carmine_pink"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tilPasswordd"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/sh_bg_btn_gunmetal"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/iniciar_sesion"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvOlvidastes"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/v01"
        android:layout_width="96dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:background="@color/carmine_pink"
        app:layout_constraintTop_toBottomOf="@id/btnIniciar"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="96dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@color/carmine_pink"
        app:layout_constraintTop_toBottomOf="@id/btnIniciar"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/inicia_sesion_con"
        android:textColor="@color/police_blue"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnIniciar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivFacebook"
        android:layout_width="108dp"
        android:layout_height="84dp"
        android:layout_margin="24dp"
        android:background="@drawable/sh_bg_btn_flesh"
        android:contentDescription="@string/content_description"
        android:padding="16dp"
        android:src="@drawable/ic_facebook"
        app:layout_constraintTop_toBottomOf="@id/v01"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivGooglePlus"
        android:layout_width="108dp"
        android:layout_height="84dp"
        android:layout_margin="24dp"
        android:background="@drawable/sh_bg_btn_flesh"
        android:contentDescription="@string/content_description"
        android:padding="16dp"
        android:src="@drawable/ic_google_plus"
        app:layout_constraintTop_toBottomOf="@id/v01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivApple"
        android:layout_width="108dp"
        android:layout_height="84dp"
        android:layout_margin="24dp"
        android:background="@drawable/sh_bg_btn_flesh"
        android:contentDescription="@string/content_description"
        android:padding="16dp"
        android:src="@drawable/ic_apple"
        app:layout_constraintTop_toBottomOf="@id/v01"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/no_tienes_una_cuenta"
            android:textColor="@color/police_blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRegistrar02"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/registrate"
            android:textColor="@color/carmine_pink"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>